--- a/configcdash.cfg
+++ b/configcdash.cfg
@@ -3,11 +3,11 @@
 [starcluster_settings]
 
 # Path to StarCluster config file.
-starcluster_config = C:\Users\pt907123\.starcluster\config
+starcluster_config = C:\Users\xxxxxxxx\.starcluster\config
 
 # CDASH wine AMI & default subnet to use
-cdash_ami = ami-5acbce32
-cdash_subnet = subnet-4a855f61
+cdash_ami = ami-xxxxxxxx
+cdash_subnet = subnet-xxxxxxxx
 
 
 ##############################
@@ -87,7 +87,7 @@ region = eu-west-1
 region_host = ec2.eu-west-1.amazonaws.com
 switchkey = AWS_VPC
 # This one has a 32GB volume attached to /mnt
-switchami = ami-260e4251
+switchami = ami-xxxxxxxx
 # This one has only the original 8GB base volume for use so not suitable for big runs.
 #switchami = ami-25413b52
-switchsubnet = subnet-c38c67a9
+switchsubnet = subnet-xxxxxxxx
