--- a/configcdash.cfg
+++ b/configcdash.cfg
@@ -89,5 +89,5 @@ switchkey = AWS_VPC
 # This one has a 32GB volume attached to /mnt
 switchami = ami-xxxxxxxx
 # This one has only the original 8GB base volume for use so not suitable for big runs.
-#switchami = ami-25413b52
+#switchami = ami-xxxxxxxx
 switchsubnet = subnet-xxxxxxxx
