Added extra parameter to config
Now need to define where DASH is installed on the AMI in the
configcdash.cfg file

--- a/configcdash.cfg
+++ b/configcdash.cfg
@@ -40,8 +40,12 @@ shutdownnodes = True
 # Add local currency code to get estimated costs for each run converted from US dollars.  Set to False if you do not wish to recieve a conversion estimate. 
 # Default = False
 convert = True 
+
 # Use ISO 4217 - e.g. Great British pounds = GBP, Euros = EUR.
 currency = GBP 
+
+# Path to where DASH is installed on the AMI
+dash_ami_location = /root/DASH/DASH.exe
 
 
 ########################
@@ -82,10 +86,10 @@ masternode_type = c4.xlarge
 # Remember to update StarCluster config with this key.
 # Must also migrate AMI to that region, and ensure a subnet is prepared.
 # Default = False
-switchregion = True
+switchregion = False
 region = eu-west-1
 region_host = ec2.eu-west-1.amazonaws.com
-switchkey = AWS_VPC
+switchkey = XXXXXXXX
 # This one has a 32GB volume attached to /mnt
 switchami = ami-xxxxxxxx
 # This one has only the original 8GB base volume for use so not suitable for big runs.
