--- a/configcdash.cfg
+++ b/configcdash.cfg
@@ -60,9 +60,9 @@ verbose = False
 # Default = 30
 tracker = 30
 
-# Edit this list if you wish to test on other instance types. Format: [type,cost/hour for instance in USD"]
-# Default = "t1.micro,0.02,c3.large,0.105,c3.xlarge,0.210,c3.2xlarge,0.420,c3.4xlarge,0.840,c3.8xlarge,1.680,c4.large,0.110,c4.xlarge,0.220,c4.2xlarge,0.441,c4.4xlarge,0.882,c4.8xlarge,1.763"
-allowinstances = t1.micro,0.02,c3.large,0.105,c3.xlarge,0.210,c3.2xlarge,0.420,c3.4xlarge,0.840,c3.8xlarge,1.680,c4.large,0.110,c4.xlarge,0.220,c4.2xlarge,0.441,c4.4xlarge,0.882,c4.8xlarge,1.763
+# Edit this list if you wish to test on other instance types. Format: instance_type,cost/hour for instance in USD
+# Default = "t2.micro,0.013,c3.large,0.105,c3.xlarge,0.210,c3.2xlarge,0.420,c3.4xlarge,0.840,c3.8xlarge,1.680,c4.large,0.110,c4.xlarge,0.220,c4.2xlarge,0.441,c4.4xlarge,0.882,c4.8xlarge,1.763"
+allowinstances = t2.micro,0.013,c3.large,0.105,c3.xlarge,0.210,c3.2xlarge,0.420,c3.4xlarge,0.840,c3.8xlarge,1.680,c4.large,0.110,c4.xlarge,0.220,c4.2xlarge,0.441,c4.4xlarge,0.882,c4.8xlarge,1.763
 
 
 # Maximum number of running instances allowed by Amazon. Request limit to be raised here: http://aws.amazon.com/contact-us/ec2-request/
